tracker-extract not quitting on idle anymore
Using tracker-miners 3.7.rc from Fedora 40 I noticed that tracker-extract-3 does not quit automatically anymore once done extracting. It seems to be stuck trying to write a query:
#0 0x00007f1e47c7c73d in poll () at /lib64/libc.so.6
#1 0x00007f1e481a988b in poll (__timeout=<optimized out>, __nfds=<optimized out>, __fds=<optimized out>) at /usr/include/bits/poll2.h:39
#2 0x00007f1e48042478 in g_unix_output_stream_write (stream=0x55963bd00fc0, buffer=0x55963c2247bd, count=4096, cancellable=0x0, error=0x0) at ../gio/gunixoutputstream.c:343
errsv = <optimized out>
unix_stream = <optimized out>
res = -1
poll_fds = {{fd = 11, events = 4, revents = 0}, {fd = 1207919764, events = 32542, revents = 0}}
nfds = <optimized out>
poll_ret = <optimized out>
#3 0x00007f1e47ff64c6 in g_output_stream_write (stream=0x55963bd00fc0, buffer=0x55963c2247bd, count=4096, cancellable=0x0, error=0x0) at ../gio/goutputstream.c:246
class = 0x55963c21cfc0
res = <optimized out>
__func__ = "g_output_stream_write"
#4 0x00007f1e47ff64c6 in g_output_stream_write (stream=stream@entry=0x55963c220370, buffer=buffer@entry=0x55963c2247bd, count=count@entry=4096, cancellable=cancellable@entry=0x0, error=error@entry=0x0)
at ../gio/goutputstream.c:246
class = 0x55963a544fc0
res = <optimized out>
__func__ = "g_output_stream_write"
#5 0x00007f1e47ff661f in g_output_stream_write_all
(stream=stream@entry=0x55963c220370, buffer=0x55963c220d90, count=count@entry=18989, bytes_written=bytes_written@entry=0x0, cancellable=cancellable@entry=0x0, error=error@entry=0x0)
at ../gio/goutputstream.c:305
_bytes_written = <optimized out>
res = <optimized out>
__func__ = "g_output_stream_write_all"
#6 0x00007f1e47eb6d8a in write_sparql_queries (error=0x0, ostream=0x55963bd00fc0, ops=<optimized out>, n_ops=<optimized out>) at ../src/libtracker-sparql/bus/tracker-bus.c:355
op = 0x55963bcebff0
data = 0x55963c220370
bytes = 0x55963c220cf0
params_str = 0x0
i = <optimized out>
rdf_stream = 0x0
error = <optimized out>
data = <optimized out>
rdf_stream = <optimized out>
bytes = <optimized out>
params_str = <optimized out>
i = <optimized out>
error = <optimized out>
op = <optimized out>
variant = <optimized out>
_pp = <optimized out>
_ptr = <optimized out>
_pp = <optimized out>
_ptr = <optimized out>
_pp = <optimized out>
_ptr = <optimized out>
_pp = <optimized out>
_ptr = <optimized out>
_pp = <optimized out>
_ptr = <optimized out>
_pp = <optimized out>
_ptr = <optimized out>
#7 tracker_bus_connection_perform_update_async (self=<optimized out>, ops=<optimized out>, n_ops=<optimized out>, cancellable=<optimized out>, callback=<optimized out>, user_data=<optimized out>)
at ../src/libtracker-sparql/bus/tracker-bus.c:1838
fd_list = 0x55963c21ce90
ostream = 0x55963bd00fc0
error = 0x0
task = <optimized out>
fd_idx = 0
#8 0x0000559639256334 in decorator_commit_info (decorator=decorator@entry=0x55963a54a1d0) at ../src/tracker-extract/tracker-decorator.c:354
sparql_conn = <optimized out>
priv = 0x55963a54a120
batch = 0x55963a5a41e0
i = 0
#9 0x0000559639256958 in decorator_cache_items_cb (object=<optimized out>, result=<optimized out>, user_data=0x55963a54a1d0) at ../src/tracker-extract/tracker-decorator.c:580
decorator = 0x55963a54a1d0
priv = 0x55963a54a120
cursor = 0x55963a572c70
info = <optimized out>
error = 0x0
queue_was_empty = <optimized out>
#10 0x00007f1e4801982c in g_task_return_now (task=0x55963a5a45d0) at ../gio/gtask.c:1361
#11 0x00007f1e4801d4c3 in g_task_return (type=<optimized out>, task=0x55963a5a45d0) at ../gio/gtask.c:1430
source = 0x7f1e1c004380
source = <optimized out>
source_name = <optimized out>
#12 g_task_return (task=0x55963a5a45d0, type=<optimized out>) at ../gio/gtask.c:1387
source = <optimized out>
source_name = <optimized out>
#13 0x00007f1e47eb5dd8 in execute_cb (source=<optimized out>, res=<optimized out>, user_data=0x55963a5a45d0) at ../src/libtracker-sparql/bus/tracker-bus-statement.c:196
cursor = <optimized out>
error = 0x0
task = 0x55963a5a45d0
#14 0x00007f1e4801982c in g_task_return_now (task=0x55963a5a5830) at ../gio/gtask.c:1361
#15 0x00007f1e4801d4c3 in g_task_return (type=<optimized out>, task=0x55963a5a5830) at ../gio/gtask.c:1430
source = 0x7f1e1c004380
source = <optimized out>
source_name = <optimized out>
#16 g_task_return (task=0x55963a5a5830, type=<optimized out>) at ../gio/gtask.c:1387
source = <optimized out>
source_name = <optimized out>
#17 0x00007f1e47eb7a26 in query_dbus_call_cb (source=<optimized out>, res=<optimized out>, user_data=0x55963a5a5830) at ../src/libtracker-sparql/bus/tracker-bus.c:1624
cursor = <optimized out>
body = <optimized out>
child = 0x7f1e1c002890
istream = 0x55963a5a5950
task = 0x55963a5a5830
reply = 0x7f1e1c0023c0
error = 0x0
#18 0x00007f1e4801982c in g_task_return_now (task=0x55963a5a63e0) at ../gio/gtask.c:1361
#19 0x00007f1e48019865 in complete_in_idle_cb (task=task@entry=0x55963a5a63e0) at ../gio/gtask.c:1375
#20 0x00007f1e4819b98d in g_idle_dispatch (source=0x7f1e1c004380, callback=0x7f1e48019850 <complete_in_idle_cb>, user_data=0x55963a5a63e0) at ../glib/gmain.c:6150
idle_source = 0x7f1e1c004380
again = <optimized out>
#21 0x00007f1e4819526c in g_main_dispatch (context=0x55963a27d810) at ../glib/gmain.c:3344
dispatch = 0x7f1e4819b960 <g_idle_dispatch>
prev_source = 0x0
begin_time_nsec = 167757547347572
was_in_call = 0
user_data = 0x55963a5a63e0
callback = 0x7f1e48019850 <complete_in_idle_cb>
cb_funcs = 0x7f1e48284280 <g_source_callback_funcs>
cb_data = 0x7f1e1c003190
need_destroy = <optimized out>
source = 0x7f1e1c004380
current = 0x55963a5460b0
i = <optimized out>
__func__ = {<optimized out> <repeats 16 times>}
#22 g_main_context_dispatch_unlocked (context=0x55963a27d810) at ../glib/gmain.c:4152
#23 0x00007f1e481f62a8 in g_main_context_iterate_unlocked.isra.0 (context=0x55963a27d810, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at ../glib/gmain.c:4217
max_priority = 2147483647
timeout = 3404
some_ready = 1
nfds = 2
allocated_nfds = <optimized out>
fds = 0x55963a55cc10
begin_time_nsec = 167757536840359
#24 0x00007f1e4819b227 in g_main_loop_run (loop=0x55963a55d030) at ../glib/gmain.c:4419
self = <optimized out>
__func__ = "g_main_loop_run"
#25 0x000055963924cce4 in do_main (argc=<optimized out>, argv=<optimized out>) at ../src/tracker-extract/tracker-main.c:458
decorator = 0x55963a54a1d0
controller = 0x55963a55bb70
connection = 0x55963a53ada0
persistence = 0x55963a543f90
miner_dbus_name = <optimized out>
extract = 0x55963a543cf0
domain_ontology = 0x55963a27ba70
context = <optimized out>
error = 0x0
my_main_loop = <optimized out>
proxy = 0x55963a556a50
sparql_connection = 0x55963a545f70
context = <optimized out>
error = <optimized out>
extract = <optimized out>
decorator = <optimized out>
controller = <optimized out>
my_main_loop = <optimized out>
proxy = <optimized out>
connection = <optimized out>
persistence = <optimized out>
sparql_connection = <optimized out>
domain_ontology = <optimized out>
miner_dbus_name = <optimized out>
help = <optimized out>
socket = <optimized out>
stream = <optimized out>
#26 main (argc=<optimized out>, argv=<optimized out>) at ../src/tracker-extract/tracker-main.c:491
__func__ = "main"