bus: Write SPARQL queries asynchronously

Write SPARQL queries asynchronously, in all of our update(_async)
and batch operations. This means we wait for both the DBus message
and the FD write responses to consider the operation finished,
like we already do for deserialization.

Closes: https://gitlab.gnome.org/GNOME/tracker-miners/-/issues/328